--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <div class="product-card">
 
               <div class="img-box">
-                <img src="./assets/images/chic.jpg" alt="product image" class="product-img" width="200" loading="lazy">
+                <img src="./assets/images/fala.jpg" alt="product image" class="product-img" width="200" loading="lazy">
               </div>
 
               <div class="product-content">
