--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 
           <a href="#">
 
-            <div class="product-card">
+            <!-- <div class="product-card">
 
               <div class="img-box">
                 <img src="./assets/images/fala.jpg" alt="product image" class="product-img" width="200" loading="lazy">
@@ -493,7 +493,7 @@
                   <p class="product-price">
                     <span class="small">$</span>14
                   </p>
-                </div>
+                </div> -->
 
                <!--  <p class="product-text">
                   tomatoes, nori, feta cheese, mushrooms, rice noodles, corn, shrimp.
