--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+<style>
+h1 {font-family: "Amatic SC", sans-serif}
+</style>
   <title>Shawarma Rox</title>
 
   <!--
@@ -265,6 +271,184 @@
       </section> -->
 
 
+<div id="home" class="w3-content">
+
+<!-- Menu -->
+<div id="menu" class="w3-container w3-black w3-xxlarge w3-padding-64">
+<h1 class="w3-center w3-jumbo w3-padding-32">THE MENU</h1>
+<div class="w3-row w3-center w3-border w3-border-dark-grey">
+<a href="#Platters"><div class="w3-third w3-padding-large w3-red">Platters</div></a>
+<a href="#Wraps"><div class="w3-third w3-padding-large w3-hover-red">Wraps</div></a>
+<a href="#Rocks & Sticks"><div class="w3-third w3-padding-large w3-hover-red">Rocks & Sticks</div></a>
+<a href="#Combos"><div class="w3-third w3-padding-large w3-hover-red">Combos</div></a>
+<a href="#Apps & Sides"><div class="w3-third w3-padding-large w3-hover-red">Apps & Sides</div></a>
+<a href="#Salads"><div class="w3-third w3-padding-large w3-hover-red">Salads</div></a>
+</div>
+
+<div id="Platters" class="w3-container w3-white w3-padding-32">
+
+<h1><b>Chicken Shawarma (670 cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$14.99</span></h1>
+<h3 class="w3-text-grey">Marinated chicken and beef served with rice, garlic potatoes, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Beef Shawarma (730 cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$18.49</span></h1>
+<h3 class="w3-text-grey">Marinated chicken served with rice, garlic potatoes, salad, hummus & garlic paste.</p>
+
+<hr>
+<h1><b>Mixed Shawarma (750 cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$17.49</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Beef Donair (Gyro) (1110 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$15.99</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Falafel (940 Cals)</b> <span class="w3-tag w3-red w3-round">Hot!</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$12.49</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Beef Kofta Kebob (660 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$15.99</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Rox Special (890 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$16.49</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Philly Cheese Veggie (900 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$15.59</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Philly Cheese Steak (1180 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$17.99</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Philly Cheese Chicken (950 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$16.49</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+
+<hr>
+<h1><b>Mixed Grill Platter (750 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$17.99</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Chicken Souvlaki (775 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$15.99</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Shish Tawook (865 Cals)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$15.99</span></h1>
+<h3 class="w3-text-grey">Marinated beef served with rice, garlic potatos, salad, hummus & garlic paste.</h3>
+
+
+</div>
+
+<h1 id="Wraps" class="w3-center w3-jumbo w3-padding-32">Wraps</h1>
+<div class="w3-container w3-white w3-padding-32">
+
+<h1><b>Chicken Shawarma</b> <span class="w3-tag w3-grey w3-round">Popular</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$7.99</span></h1>
+<h3 class="w3-text-grey">Special sauce, mozzarella, parmesan, ground beef</h3>
+
+<hr>
+<h1><b>Mixed Shawarma</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$9.89</span></h1>
+<h3 class="w3-text-grey">Marinated beef, salad, hummus & garlic paste.</h3>
+
+<hr>
+<h1><b>Beef Shawarma</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$9.89</span></h1>
+<h3 class="w3-text-grey">Fresh tomatoes, onions, ground beef</h3>
+
+<hr>
+<h1><b>Beef Donair (Gyro)</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$9.89</span></h1>
+<h3 class="w3-text-grey">Fresh tomatoes, onions, ground beef</h3>
+
+</div>
+
+<h1 id="Rocks & Sticks" class="w3-center w3-jumbo w3-padding-32">Rocks & Sticks</h1>
+<div class="w3-container w3-white w3-padding-32">
+
+<h1><b>Falafel on the Rocks</b> <span class="w3-tag w3-grey w3-round">Seasonal</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$9.19</span></h1>
+<h3 class="w3-text-grey">Ask the waiter</h3>
+
+<hr>
+<h1><b>Mix Shawarma on the Rocks</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$11.99</span></h1>
+<h3 class="w3-text-grey">Bread with pesto, tomatoes, onion, garlic</h3>
+
+<hr>
+<h1><b>Mix Shawarma on the Sticks</b> <span class="w3-right w3-tag w3-dark-grey w3-round">$12.99</span></h1>
+<h3 class="w3-text-grey">Grilled ciabatta, garlic butter, onions</h3>
+</div>
+
+<h1 id="Combos" class="w3-center w3-jumbo w3-padding-32">Combos</h1>
+<div class="w3-container w3-white w3-padding-32">
+
+<h1><b>1 Chicken Wrap (Regular)</b> <span class="w3-tag w3-grey w3-round">(For 2)</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$27.99</span></h1>
+
+<h1><b>2 Pop Cans</b> <span class="w3-tag w3-grey w3-round">(For 2)</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$27.99</span></h1>
+
+<h1><b>2 Chicken Wraps (Regular)</b> <span class="w3-tag w3-grey w3-round">(For 4)</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$37.99</span></h1>
+
+<h1><b>1 Salad (Any Regular)</b> <span class="w3-tag w3-grey w3-round">(For 4)</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$37.99</span></h1>
+
+<h1><b>3 Chicken Wraps (Regular)</b> <span class="w3-tag w3-grey w3-round">(For 6)</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$57.99</span></h1>
+
+<h1><b>1 Hummus</b> <span class="w3-tag w3-grey w3-round">(For 6)</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$57.99</span></h1>
+
+<h1><b>3 Pita</b> <span class="w3-tag w3-grey w3-round">(For 6)</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$57.99</span></h1>
+</div>
+
+<h1 id="Apps & Sides" class="w3-center w3-jumbo w3-padding-32">Appetizers</h1>
+<div class="w3-container w3-white w3-padding-32">
+
+<h1><b>Chicken Souvlaki Skewer</b> <span class="w3-tag w3-grey w3-round">Each</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$7.99</span></h1>
+
+<h1><b>Beef Kofta Kabob Skewer</b> <span class="w3-tag w3-grey w3-round">Each</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$4.49</span></h1>
+
+<h1><b>Shish Tawook Skewer</b> <span class="w3-tag w3-grey w3-round">Each</span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$5.49</span></h1>
+
+<h1><b>Lentil Soup (280 cals)</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$5.49</span></h1>
+
+<h1><b>Tabbouleh (300 cals)</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.99</span></h1>
+
+<h1><b>Baba Ghanoush (285 cals)</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.69</span></h1>
+
+<h1><b>Fava Beans (265 cals)</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.69</span></h1>
+
+<h1><b>Hummus (375 cals)</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.69</span></h1>
+
+<h1><b>Falafel (55 cals)</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$1.09</span></h1>
+
+<h1><b>Baklava (6 Pcs) (230 cals/ Pc)</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.99</span></h1>
+
+
+
+
+
+
+
+
+</div>
+
+<!-- End Content -->
+</div>
 
 
 
