--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ h1 {font-family: "Amatic SC", sans-serif}
 
           <div class="btn-group">
 
-            <button class="btn btn-primary btn-icon" id="#menu">
+            <button class="btn btn-primary btn-icon"><a href="#menu" class="nav-link"></a>
               <img src="./assets/images/menu.svg" alt="menu icon">
               Our menu
             </button>
@@ -820,7 +820,7 @@ h1 {font-family: "Amatic SC", sans-serif}
 
         </div>
 
-        <p class="copyright">&copy; Copyright © Shawarma Rox! 2022</p>
+        <p class="copyright">&copy; Copyright @ Shawarma Rox! 2022</p>
 
                 <div class="contacts" id="contact">
                     <h5>Contact us</h5>
