--- a/index.html
+++ b/index.html
@@ -117,13 +117,9 @@ h1 {font-family: "Amatic SC", sans-serif}
 
             <button class="btn btn-primary btn-icon"><a href="#menu" class="nav-link"></a>
               <img src="./assets/images/menu.svg" alt="menu icon">
-              Our menu
+              Come Lets see what's in!
             </button>
 
-            <button class="btn btn-secondary btn-icon" id="#about">
-              <img src="./assets/images/arrow.svg" alt="menu icon">
-              About us
-            </button>
 
           </div>
 
@@ -699,11 +695,7 @@ h1 {font-family: "Amatic SC", sans-serif}
 
         </div>
 
-        <button type=submit class="btn btn-primary btn-icon" value="menu.html">
-         
-          <img src="./assets/images/menu.svg" alt="menu icon">
-          Full menu
-        </button>
+        
 
       </section>
 
