--- a/index.html
+++ b/index.html
@@ -434,11 +434,42 @@ h1 {font-family: "Amatic SC", sans-serif}
 <h1><b>Baklava (6 Pcs) (230 cals/ Pc)</b> <span class="w3-tag w3-grey w3-round"></span>
 <span class="w3-right w3-tag w3-dark-grey w3-round">$6.99</span></h1>
 
+<h1><b>Fries</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$5.99</span></h1>
+
+<h1><b>Rice</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$5.99</span></h1>
+
+<h1><b>Chili Fries</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.69</span></h1>
+
+<h1><b>Potatoes</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$5.79</span></h1>
+
+<h1><b>Chicken</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$13.79</span></h1>
+
+<h1><b>Beef</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$16.49</span></h1>
 
 
+<h1 id="Salads" class="w3-center w3-jumbo w3-padding-32">Salads</h1>
+<div class="w3-container w3-white w3-padding-32">
 
+<h1><b>Caesar Salad</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.89</span></h1>
 
+<h1><b>Greek Salad</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.89</span></h1>
 
+<h1><b>Garden Salad</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$6.89</span></h1>
+
+<h1><b>Chicken Salad</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$10.28</span></h1>
+
+<h1><b>Falafel Salad</b> <span class="w3-tag w3-grey w3-round"></span>
+<span class="w3-right w3-tag w3-dark-grey w3-round">$9.69</span></h1>
 
 
 </div>
