--- a/index.html
+++ b/index.html
@@ -475,14 +475,14 @@ h1 {font-family: "Amatic SC", sans-serif}
 </div>
 
 <!-- End Content -->
-</div>
+
 
 
 
       <!--
         - #PRODUCT SECTION
       -->
-
+<div>
       <section class="product" id="menu">
 
         <h2 class="section-title">Menu</h2>
